# play-gl-ground

./: LICENSE  README.md  meson.build  rectangle.cpp  triangle.cpp
include/: util.h
include/shader/: triangle_fs.glsl  triangle_vs.glsl
